# vm-lang

./: Cargo.toml
examples/: day_1_aoc_2020.gr  day_1_aoc_2021.gr  to_parse.gr  to_parse.vm
src/: core.lalrpop  core_types.rs  interpreter.rs  lib.rs  main.rs  type_checker.rs  typed_types.rs
test_generator_macro/: Cargo.toml
test_generator_macro/src/: lib.rs
tests/: test_files.rs
tests/test_programs/: dec_operation.gr  invalid_var_name_end_on_dash.gr  invalid_var_name_number_only.gr  not_operation.gr
vm_lang/: .gitignore  Cargo.toml  README.md
vm_lang/examples/: test.gr  to_parse.gr
vm_lang/src/: core.lalrpop  core_types.rs  interpreter.rs  lib.rs  main.rs  type_checker.rs  typed_types.rs
vm_lang/src/gr_std_lib/: builtins.rs
vm_lang/src/types/: core_types.rs  mod.rs  typed_types.rs  value.rs
vm_lang/tests/: test_files.rs
vm_lang/tests/test_program_files/: read_file.txt
vm_lang/tests/test_program_inputs/: basic_input.input
vm_lang/tests/test_programs/: basic_input.gr  boolean.gr  for.gr  function_call.gr  function_call___tmp_test_output.test  function_scopes.gr  if.gr  inc_operation.gr  invalid_var_name_end_on_underscore.gr  list.gr  list_out_of_bounds.gr  list_unknown_type.gr  parenthesis_prio.expected  parenthesis_prio.gr  parenthesis_prio___tmp_test_output.test  read_file.gr  split_string.gr  string.gr  valid_var_names.gr  while.gr
vm_lang/tests/test_programs_expected/: basic_input.expected  for.expected  function_call.expected  list.expected  read_file.expected  split_string.expected  string.expected
vscode_extension/go-rust-syntax-highlighting/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
(+1 files in other folders)
