[package]
name = "vm-lang"
version = "0.1.0"
edition = "2021"
build = "src/build.rs" # LALRPOP Preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.19.7"