[package]
name = "vm_lang"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
description = "A simple interpreted language written in Rust."
build = "src/build.rs" # LALRPOP Preprocessing
authors = ["Vidar Magnusson <crates.io@vidarmagnusson.com>"]
readme = "../README.md"
repository = "https://github.com/viddem/vm-lang"

[[bin]]
name = "vm_lang"
path = "src/main.rs"

[lib]
name = "vm_lang"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
test_generator_macro = { path = "../test_generator_macro" }